@startuml uml-class-converter

package "API" {
  class ConverterController {
    + listUnitDimensions(): sting[]
    + listQuantityClasses(): string[]
    + listQuantityClassForUnit(unit: string): string[]
    + listAliasForUnit(unit: string): string[]
    + convertUnit(unitA: string, unitB: string, value: number): ConversionResult
    + createSubQuantityClass(parent: string, className: string): void
  }
}

package "Converter" {
  class Converter {
    + convertValue(unitA: string, unitB: string, value: number): ConversionResult
  }

  class ConversionResult {
    + fromUnit: IUnit
    + toUnit: IUnit
    + fromValue: number
    + toValue: number
  }
}

package "Domain" {
  interface IUnit {
    + name: string
    + types: QuantityType[]
    + symbol: string
    + convertToBase(value: number): number
    + convertFromBase(value: number): number
  }
  class UnitFactory {
    + {static} loadUnit(name: string): IUnit
  }
  class UnitRepository {
    + getUnitFromname(name: string): IUnit
    + listUnitDimensions(): sting[]
    + listQuantityClasses(): string[]
    + listQuantityClassForUnit(unit: string): string[]
    + listAliasForUnit(unit: string): string[]
    + createSubQuantityClass(parent: string, className: string): void
  }
}

ConverterController --> Converter
ConverterController --> ConversionResult
ConverterController --> UnitRepository
Converter -LEFT-> ConversionResult
Converter --> IUnit
Converter --> UnitFactory

@enduml